syntax = "proto3";

package proto;

import "github.com/mwitkow/go-proto-validators/validator.proto";

// Event is used for NATS pub/sub.
message Event {
    string aggregate_id = 1 [(validator.field) = {string_not_empty: true}];
    string aggregate_type = 2 [(validator.field) = {string_not_empty: true}];
    string event_id = 3 [(validator.field) = {string_not_empty: true}];
    string event_type = 4 [(validator.field) = {string_not_empty: true}];
    string event_data = 5 [(validator.field) = {string_not_empty: true}];
}

service CenterService {
    rpc InitCfg(InitCfgRequest) returns (InitCfgResponse) {}
    rpc SaveData(SaveDataRequest) returns (SaveDataResponse) {}
}

message DevMeta {
    string type = 1 [(validator.field) = {string_not_empty: true}];
    string name = 2 [(validator.field) = {string_not_empty: true}];
    string mac = 3 [(validator.field) = {string_not_empty: true}];
}

message InitCfgRequest {
    int64 time = 1 [(validator.field) = {msg_exists : true}];
    DevMeta meta = 2 [(validator.field) = {msg_exists : true}];
}
message InitCfgResponse {
    bytes cfg = 1 [(validator.field) = {msg_exists : true}];
}

message SaveDataRequest {
    int64 time = 1 [(validator.field) = {msg_exists : true}];
    DevMeta meta = 2 [(validator.field) = {msg_exists : true}];
    bytes data = 3 [(validator.field) = {msg_exists : true}];
}
message SaveDataResponse {
    string status = 1 [(validator.field) = {string_not_empty: true}];
}
